fix: let elements not be moved by scrollbar

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -23,7 +23,7 @@ button {
 
 #root {
   height: 100%;
-  width: 100%;
+  width: 100vw;
 }
 
 code {
